<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonarsource.parent</groupId>
    <artifactId>parent</artifactId>
    <version>83.0.0.2369</version>
    <relativePath/>
  </parent>

  <groupId>org.sonarsource.jenkins</groupId>
  <artifactId>its</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>Jenkins :: Integration Tests</name>

  <inceptionYear>2013</inceptionYear>

  <properties>
    <sonar-ws.version>9.9.0.65466</sonar-ws.version>
    <maven.compiler.release>8</maven.compiler.release>

    <license.name>GNU LGPL v3</license.name>
    <license.owner>SonarSource SA</license.owner>
    <license.title>${project.name}</license.title>
    <license.years>${project.inceptionYear}-2025</license.years>
    <license.mailto>mailto:info AT sonarsource DOT com</license.mailto>
  </properties>

  <repositories>
    <repository>
      <id>repo.jenkins-ci.org</id>
      <url>https://repo.jenkins-ci.org/public/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.jenkins-ci</groupId>
      <artifactId>acceptance-test-harness</artifactId>
      <version>5699.v27deb_ef5796c</version>
    </dependency>

    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.12.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.sonarsource.sonarqube</groupId>
      <artifactId>sonar-ws</artifactId>
      <version>${sonar-ws.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.sonarsource.orchestrator</groupId>
      <artifactId>sonar-orchestrator</artifactId>
      <version>3.40.0.183</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <!-- nothing in there actually uses the log4j API, and this layer conflicts with slf4j-log4j12 from Jenkins ATH -->
          <groupId>org.slf4j</groupId>
          <artifactId>log4j-over-slf4j</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.squareup.okhttp3</groupId>
      <artifactId>okhttp</artifactId>
      <version>3.7.0</version>
      <scope>test</scope>
    </dependency>
    
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <systemProperties>
              <maven.home>${maven.home}</maven.home>
            </systemProperties>
            <argLine>
                --add-exports java.base/sun.reflect.annotation=ALL-UNNAMED
            </argLine>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.browserup</groupId>
        <artifactId>browserup-proxy-core</artifactId>
        <exclusions>
          <exclusion>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
          </exclusion>
          <exclusion>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
    </dependencies>
  </dependencyManagement>
  
  <profiles>
    <profile>
      <id>all-tests</id>
      <activation>
        <property>
          <name>!test</name>
        </property>
      </activation>
      <properties>
        <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
      </properties>
    </profile>
  </profiles>
</project>
